tests/snapshots/infer_types__add_bril_checks.snap
---
source: bril-frontend/tests/infer_types.rs
expression: "format! (\"PROGRAM\\n--------\\n{}\\n\\nTYPES\\n-------\\n{}\", code, snapshot)"
---
PROGRAM
--------
@main {
  v0: int = const 1;
  v1: int = const 2;
  v2: int = add v0 v1;
  print v2;
}


TYPES
-------
FUNCTION @main
  v0: int
  v1: int
  v2: int
